--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -357,6 +357,8 @@
     <Compile Include="Areas\VASC\Controllers\c_controller_classController.cs" />
     <Compile Include="Areas\VASC\Controllers\c_csv_logController.cs" />
     <Compile Include="Areas\VASC\Controllers\c_device_infoController.cs" />
+    <Compile Include="Areas\VASC\Controllers\c_variableController.cs" />
+    <Compile Include="Areas\VASC\Controllers\c_variable_searchController.cs" />
     <Compile Include="Areas\VASC\Controllers\vascController.cs" />
     <Compile Include="Areas\VASC\Models\c_alarm_ignore.cs">
       <DependentUpon>VASC.tt</DependentUpon>
@@ -388,9 +390,11 @@
     <Compile Include="Areas\VASC\Models\c_variable.cs">
       <DependentUpon>VASC.tt</DependentUpon>
     </Compile>
+    <Compile Include="Areas\VASC\Models\c_variableMetadata.cs" />
     <Compile Include="Areas\VASC\Models\c_variable_search.cs">
       <DependentUpon>VASC.tt</DependentUpon>
     </Compile>
+    <Compile Include="Areas\VASC\Models\c_variable_searchMetadata.cs" />
     <Compile Include="Areas\VASC\Models\VASC.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -899,6 +903,10 @@
     <Content Include="Areas\VASC\Views\c_controller_class\Edit.cshtml" />
     <Content Include="Areas\VASC\Views\c_controller_class\Index.cshtml" />
     <Content Include="Areas\VASC\Views\vasc\Index.cshtml" />
+    <Content Include="Areas\VASC\Views\c_variable\Edit.cshtml" />
+    <Content Include="Areas\VASC\Views\c_variable\Index.cshtml" />
+    <Content Include="Areas\VASC\Views\c_variable_search\Edit.cshtml" />
+    <Content Include="Areas\VASC\Views\c_variable_search\Index.cshtml" />
     <None Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="MvcGrid\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="MvcGrid\fonts\glyphicons-halflings-regular.svg" />
