--- a/EqUiWebUi/packages.config
+++ b/EqUiWebUi/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
+  <package id="Bootstrap.Multiselect" version="0.9.13" targetFramework="net46" />
   <package id="d3" version="4.12.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
   <package id="Hangfire" version="1.6.17" targetFramework="net451" />
