--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -354,17 +354,13 @@
     </Compile>
     <Compile Include="Areas\user_management\SreenHub.cs" />
     <Compile Include="Areas\user_management\user_managementAreaRegistration.cs" />
-    <Compile Include="Areas\VASC\Controllers\c_alarm_ignoreController.cs" />
     <Compile Include="Areas\VASC\Controllers\c_controller_classController.cs" />
     <Compile Include="Areas\VASC\Controllers\c_csv_logController.cs" />
     <Compile Include="Areas\VASC\Controllers\c_device_infoController.cs" />
+    <Compile Include="Areas\VASC\Controllers\c_errorController.cs" />
     <Compile Include="Areas\VASC\Controllers\c_variableController.cs" />
     <Compile Include="Areas\VASC\Controllers\c_variable_searchController.cs" />
     <Compile Include="Areas\VASC\Controllers\vascController.cs" />
-    <Compile Include="Areas\VASC\Models\c_alarm_ignore.cs">
-      <DependentUpon>VASC.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Areas\VASC\Models\c_alarm_ignoreMetadata.cs" />
     <Compile Include="Areas\VASC\Models\c_controller.cs">
       <DependentUpon>VASC.tt</DependentUpon>
     </Compile>
@@ -380,11 +376,10 @@
       <DependentUpon>VASC.tt</DependentUpon>
     </Compile>
     <Compile Include="Areas\VASC\Models\c_device_infoMetadata.cs" />
-    <Compile Include="Areas\VASC\Models\c_error_no_log.cs">
+    <Compile Include="Areas\VASC\Models\c_error.cs">
       <DependentUpon>VASC.tt</DependentUpon>
     </Compile>
-    <Compile Include="Areas\VASC\Models\c_error_no_logController.cs" />
-    <Compile Include="Areas\VASC\Models\c_error_no_logMetadata.cs" />
+    <Compile Include="Areas\VASC\Models\c_errorMetadata.cs" />
     <Compile Include="Areas\VASC\Models\c_job.cs">
       <DependentUpon>VASC.tt</DependentUpon>
     </Compile>
@@ -910,13 +905,11 @@
     <Content Include="Areas\VASC\Views\c_variable_search\_List.cshtml" />
     <Content Include="Areas\VASC\Views\c_csv_log\_List.cshtml" />
     <Content Include="Areas\VASC\Views\c_device_info\_List.cshtml" />
-    <Content Include="Areas\VASC\Views\c_alarm_ignore\Delete.cshtml" />
-    <Content Include="Areas\VASC\Views\c_alarm_ignore\Edit.cshtml" />
-    <Content Include="Areas\VASC\Views\c_alarm_ignore\Index.cshtml" />
-    <Content Include="Areas\VASC\Views\c_error_no_log\Delete.cshtml" />
-    <Content Include="Areas\VASC\Views\c_error_no_log\Edit.cshtml" />
-    <Content Include="Areas\VASC\Views\c_error_no_log\Index.cshtml" />
     <Content Include="Areas\VASC\Views\c_controller_class\_Details.cshtml" />
+    <Content Include="Areas\VASC\Views\c_error\Delete.cshtml" />
+    <Content Include="Areas\VASC\Views\c_error\Edit.cshtml" />
+    <Content Include="Areas\VASC\Views\c_error\Index.cshtml" />
+    <Content Include="Areas\VASC\Views\c_error\_List.cshtml" />
     <None Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="MvcGrid\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="MvcGrid\fonts\glyphicons-halflings-regular.svg" />
