--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -356,6 +356,7 @@
     </Compile>
     <Compile Include="Areas\user_management\SreenHub.cs" />
     <Compile Include="Areas\user_management\user_managementAreaRegistration.cs" />
+    <Compile Include="Areas\VASC\Controllers\BreakdownController.cs" />
     <Compile Include="Areas\VASC\Controllers\c_controllerController.cs" />
     <Compile Include="Areas\VASC\Controllers\c_controller_classController.cs" />
     <Compile Include="Areas\VASC\Controllers\c_csv_logController.cs" />
@@ -368,6 +369,9 @@
     <Compile Include="Areas\VASC\Controllers\rt_active_infoController.cs" />
     <Compile Include="Areas\VASC\Controllers\serviceController.cs" />
     <Compile Include="Areas\VASC\Controllers\vascController.cs" />
+    <Compile Include="Areas\VASC\Models\ControllerEventLog.cs">
+      <DependentUpon>VASC.tt</DependentUpon>
+    </Compile>
     <Compile Include="Areas\VASC\Models\c_controller.cs">
       <DependentUpon>VASC.tt</DependentUpon>
     </Compile>
@@ -424,6 +428,13 @@
       <DependentUpon>VASC.tt</DependentUpon>
     </Compile>
     <Compile Include="Areas\VASC\Models\rt_eventMetadata.cs" />
+    <Compile Include="Areas\VASC\Models\rt_job.cs">
+      <DependentUpon>VASC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Areas\VASC\Models\rt_job_breakdown.cs">
+      <DependentUpon>VASC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Areas\VASC\Models\rt_job_breakdownMetadata.cs" />
     <Compile Include="Areas\VASC\Models\rt_search_value.cs">
       <DependentUpon>VASC.tt</DependentUpon>
     </Compile>
@@ -971,6 +982,10 @@
     <Content Include="Areas\VASC\Views\L_operation\_List.cshtml" />
     <Content Include="Areas\VASC\Views\L_operation\Index.cshtml" />
     <Content Include="Areas\VASC\Views\service\GetServices.cshtml" />
+    <Content Include="Areas\VASC\Views\Breakdown\_getJob.cshtml" />
+    <Content Include="Areas\VASC\Views\Breakdown\Index.cshtml" />
+    <Content Include="Areas\VASC\Views\Breakdown\rtJob.cshtml" />
+    <Content Include="Areas\VASC\Views\Breakdown\_rtj_job_breakdownGridPartial.cshtml" />
     <None Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="MvcGrid\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="MvcGrid\fonts\glyphicons-halflings-regular.svg" />
